--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "axios": "^1.3.3",
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3",
-    "firebase-admin": "^11.5.0"
+    "dotenv": "^16.0.3"
   }
 }
