--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vojtěch Habeš",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.3",
